exports[`Setup LogGroup Subscriptions should setup log group subscriptions 1`] = `
Object {
  "TestingLambdaFunctionSubscriptionFilter": Object {
    "DependsOn": "LoggingLambdaPermission",
    "Properties": Object {
      "DestinationArn": Object {
        "Fn::GetAtt": Array [
          "LogHandlerLambdaFunction",
          "Arn",
        ],
      },
      "FilterPattern": "",
      "LogGroupName": "/aws/lambda/testing",
    },
    "Type": "AWS::Logs::SubscriptionFilter",
  },
  "logHandlerLambdaPermission": Object {
    "Properties": Object {
      "Action": "lambda:InvokeFunction",
      "FunctionName": Object {
        "Fn::GetAtt": Array [
          "LogHandlerLambdaFunction",
          "Arn",
        ],
      },
      "Principal": Object {
        "Fn::Join": Array [
          "",
          Array [
            "logs.",
            Object {
              "Ref": "AWS::Region",
            },
            ".amazonaws.com",
          ],
        ],
      },
    },
    "Type": "AWS::Lambda::Permission",
  },
}
`;

exports[`Setup LogGroup Subscriptions should setup log group subscriptions to the correct functions 1`] = `
Object {
  "TestingLambdaFunctionSubscriptionFilter": Object {
    "DependsOn": "LoggingLambdaPermission",
    "Properties": Object {
      "DestinationArn": Object {
        "Fn::GetAtt": Array [
          "LogHandlerLambdaFunction",
          "Arn",
        ],
      },
      "FilterPattern": "",
      "LogGroupName": "/aws/lambda/testing",
    },
    "Type": "AWS::Logs::SubscriptionFilter",
  },
  "TestingLocalFunctionLambdaFunctionSubscriptionFilter": Object {
    "DependsOn": "LoggingLambdaPermission",
    "Properties": Object {
      "DestinationArn": Object {
        "Fn::GetAtt": Array [
          "TestLogHandlerLambdaFunction",
          "Arn",
        ],
      },
      "FilterPattern": "",
      "LogGroupName": "/aws/lambda/undefined",
    },
    "Type": "AWS::Logs::SubscriptionFilter",
  },
  "logHandlerLambdaPermission": Object {
    "Properties": Object {
      "Action": "lambda:InvokeFunction",
      "FunctionName": Object {
        "Fn::GetAtt": Array [
          "LogHandlerLambdaFunction",
          "Arn",
        ],
      },
      "Principal": Object {
        "Fn::Join": Array [
          "",
          Array [
            "logs.",
            Object {
              "Ref": "AWS::Region",
            },
            ".amazonaws.com",
          ],
        ],
      },
    },
    "Type": "AWS::Lambda::Permission",
  },
  "testLogHandlerLambdaPermission": Object {
    "Properties": Object {
      "Action": "lambda:InvokeFunction",
      "FunctionName": Object {
        "Fn::GetAtt": Array [
          "TestLogHandlerLambdaFunction",
          "Arn",
        ],
      },
      "Principal": Object {
        "Fn::Join": Array [
          "",
          Array [
            "logs.",
            Object {
              "Ref": "AWS::Region",
            },
            ".amazonaws.com",
          ],
        ],
      },
    },
    "Type": "AWS::Lambda::Permission",
  },
}
`;
